# megaRAG

./: .gitignore  README.md  create_test_zip.py  docker-compose.yml  full_aquery_source.py  full_logs.txt  logs.txt  logs_utf8.txt  prepare_zip.sh  probe_api.py  probe_api_8003.py  rag_attributes.txt  rag_logs.txt  temp_logs.txt  test_ingest_md.py  test_url_metadata.py  verification_logs.txt  verify_zip.py
backend/: Dockerfile  package-lock.json  package.json
backend/src/: app.js
backend/src/config/: db.js  upload.js
backend/temp_repos/0a62b6db-c236-4320-a316-4dd89824ba56/promptguard-idl-main/: .gitignore  go.mod  mkdocs.yml  pyproject.toml
frontend/: Dockerfile  build_log.txt  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx
monitoring/grafana/: datasources.yaml
monitoring/prometheus/: prometheus.yml
monitoring/promtail/: config.yml
rag_service/: Dockerfile  check_databases.py  check_qdrant.py  db_status.py  debug_rag_status.py  error_log.txt  inspect_db.py  logs.txt  logs_err.txt  logs_full.txt  main.py  markdown_splitter.py  qdrant_impl_copy.py  requirements.txt  reset_rag.py  test_composite_ids.py  test_data_verification.py  test_deep_linking.py  test_delete.py  test_delete_complete.py  test_deletion.py  test_detailed_ingest.py  test_ingest.py  test_ingest_better.py  test_initialization.py  test_md5_deletion_fix.py  test_query.py  test_query_better.py  test_query_naive.py  test_retrieval_debug.py
rag_service/static/: index.html
temp_mkdocs_project/: mkdocs.yml
test_data/promptguard-idl-main/: mkdocs.yml
(+71 files in other folders)
