[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "itmx"
version = "0.1.0"
description = "Shared gRPC/Protobuf contracts for PromptGuard ITMX"
requires-python = ">=3.10"
dependencies = [
  "betterproto[compiler]>=2.0.0b7",
  "buf>=1.0.0",
  "grpcio-tools>=1.76.0",
  "grpclib>=0.4.5",
  "mkdocs>=1.6.1",
  "mkdocs-mermaid2-plugin>=1.2.3",
]

[tool.setuptools]
package-dir = {"" = "gen/python"}

[tool.setuptools.packages.find]
where = ["gen/python"]
